RT-21491: EPIC Research Page Fixes

--- a/web-content/root/education/EPIC/research.html
+++ b/web-content/root/education/EPIC/research.html
@@ -2,23 +2,6 @@
 	<h3>
 		Current Projects</h3>
 	<h4>
-		<abbr title="Computing Educator Diversity Initiative">CEDI</abbr> (<dfn>Computing Educator Diversity Initiative</dfn>)</h4>
-	<p>
-		Lead: <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a>, & <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
-	<div class="s-text-figure-pair">
-		<figure>
-			<a href="/documents/1084364/2044593/CEDI_logo.png" target="_blank"><img class="img-responsive" src="/documents/1084364/2044593/CEDI_logo.png" title="A pyramid diagram about what EPIC provides through CAPE (Capacity, Access, Participation, Experience) Framework" /></a><figcaption class="sr-only">Logo with text CEDI and "computing educator diversity initiative", and imagery of finger prints, simplified WeTeachCS logo, and three concentric rings broken into quadrants offset from each other and different colors.</figcaption></figure>
-		<p>CEDI consists of in-service educators who are historically underrepresented in CS that will work within a community of practice as together they deepen their CS content knowledge, pedagogical skills, and equitable strategies — and receive support to obtain their CS teacher certification. Funded by the National Science Foundation (NSF #1837602) and Microsoft, the CEDI program recruits educators who identify with historically underrepresented student populations to become certified high school CS teachers. The NSF has identified the following groups as historically underrepresented in CS: women, persons with disabilities, Blacks and African Americans, Hispanics, American Indians, Alaska Natives, Native Hawaiians, and Pacific Islanders. [Learn more](https://utakeit.tacc.utexas.edu/resources/cedi-Program/) about the CEDI program.</p>
-	</div>
-	<h4>
-	<h4>
-		<abbr title="Strategies for Effective and Inclusive CS Teaching">ScIP</abbr> (<dfn>Strategies for Effective and Inclusive CS Teaching</dfn>)</h4>
-	<p>
-		Lead: <a href="https://www.tacc.utexas.edu/about/directory/nicole-martin">Nicole Martin</a>, <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, & <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
-	<div class="s-text-figure-pair  clearfix">
-		<p>The goal of the ScIP project is to support more equitable and inclusive classroom environments so that all students, especially those from marginalized communities, build a sense of belonging and identity in computer science (CS). ScIP aims to provide K-12 teachers with equity-focused professional learning experiences so they are equipped to embrace diversity and focus on equitable access to, participation in, and experiences of CS in their schools and classrooms. The hybrid professional learning course is designed for cohorts of teachers to complete together, and ScIP also hosts facilitator trainings to offer the course at scale to teaches across the country. Learn more (https://utakeit.tacc.utexas.edu/effective-strategies-V2/) about the course.[Learn more](https://utakeit.tacc.utexas.edu/effective-strategies-V2/) about the course.</p>
-	</div>
-	<h4>
 		<dfn><abbr title="Capacity, Access, Participation, Experience">CAPE</abbr></dfn> Framework</h4>
 	<p>
 		Lead: <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a> &amp; <a href="https://www.tacc.utexas.edu/about/directory/jayce-warner">Jayce Warner</a></p>
@@ -140,6 +123,20 @@
 		Lead: <a href="https://www.tacc.utexas.edu/about/directory/nicole-martin">Nicole Martin</a></p>
 	<p>
 		The MTCS scale was developed to understand why teachers chose to teach computer science (CS). Grounded in self-determination theory, the scale characterizes teachers' motivation to teach CS on a continuum from external to increasingly internal motivation. The MTCS scale consists of 18 items with Likert-type response options, and results from factor analyses show that the scale has internal reliability and construct validity. This measure can be used by researchers and practitioners to investigate the motivations of CS teachers and use that understanding to strengthen <abbr title="Computer Science education">CSEd</abbr> by addressing challenges related to recruiting, preparing, and retaining teachers.</p>
+	<h4>
+		<abbr title="Computing Educator Diversity Initiative">CEDI</abbr> (<dfn>Computing Educator Diversity Initiative</dfn>)</h4>
+	<p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, <a href="https://www.tacc.utexas.edu/about/directory/stephanie-baker">Stephanie Baker</a>, & <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+	<div class="s-text-figure-pair clearfix">
+		<img class="col-sm-5 pull-right img-responsive" src="/documents/1084364/2044593/CEDI_logo.png" title="CEDI (computing educator diversity initiative) and imagery of finger prints, WeTeachCS logo, and CEDI logo" />
+		<p>
+			CEDI consists of in-service educators who are historically underrepresented in CS that will work within a community of practice as together they deepen their CS content knowledge, pedagogical skills, and equitable strategies — and receive support to obtain their CS teacher certification. Funded by the National Science Foundation (NSF #1837602) and Microsoft, the CEDI program recruits educators who identify with historically underrepresented student populations to become certified high school CS teachers. The NSF has identified the following groups as historically underrepresented in CS: women, persons with disabilities, Blacks and African Americans, Hispanics, American Indians, Alaska Natives, Native Hawaiians, and Pacific Islanders. <a href="https://utakeit.tacc.utexas.edu/resources/cedi-Program/" target="_blank">Learn more</a> about the CEDI program.</p></div>
+	<h4>
+		<abbr title="Strategies for Effective and Inclusive CS Teaching">ScIP</abbr> (<dfn>Strategies for Effective and Inclusive CS Teaching</dfn>)</h4>
+	<p>
+		Lead: <a href="https://www.tacc.utexas.edu/about/directory/nicole-martin">Nicole Martin</a>, <a href="https://www.tacc.utexas.edu/about/directory/allen-antoine">Allen Antoine</a>, & <a href="https://www.tacc.utexas.edu/about/directory/carol-fletcher">Carol Fletcher</a></p>
+	<p>
+		The goal of the ScIP project is to support more equitable and inclusive classroom environments so that all students, especially those from marginalized communities, build a sense of belonging and identity in computer science (CS). ScIP aims to provide K-12 teachers with equity-focused professional learning experiences so they are equipped to embrace diversity and focus on equitable access to, participation in, and experiences of CS in their schools and classrooms. The hybrid professional learning course is designed for cohorts of teachers to complete together, and ScIP also hosts facilitator trainings to offer the course at scale to teaches across the country. <a href="https://utakeit.tacc.utexas.edu/effective-strategies-V2/" target="_blank">Learn more</a> about the course.</p>
 	<h3>
 		Resources</h3>
 	<h4>
