RT-21605: Robotics Camp Tweaks

--- a/web-content/root/education/stem-programs/code-at-tacc/_faq--on-site.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/_faq--on-site.html
@@ -138,7 +138,7 @@
 					</div>
 					<div aria-labelledby="laptop" class="panel-collapse collapse" id="laptop-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Participants will not need to bring laptops from home. Laptops will be loaned to students during the program.</div>
+							<b>A:</b> Participants will not need to bring laptops from home.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
