--- a/web-content/root/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/robotics.html
@@ -34,7 +34,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				Code@TACC is an innovative and exciting virtual summer program that incorporates a project-based learning approach to expose students to Science, Technology, Engineering, and Math (<dfn>STEM</dfn>) applications. Students foster their talent and creativity by being introduced to programming, robotics, and electronics.</p>
+				Code@TACC is an innovative and exciting summer program that incorporates a project-based learning approach to expose students to Science, Technology, Engineering, and Math (<dfn>STEM</dfn>) applications. Students foster their talent and creativity by being introduced to programming, robotics, and electronics.</p>
 			<p>
 				All current 9th and 10th grade (rising 10th and 11th grade) high school students are welcome to apply. We encourage the participation of students traditionally underrepresented in STEM. Selected students will be housed in a campus dorm at The University of Texas (UT) at Austin at no cost.</p>
 			<p>
