chore(RT-21648): save training & events from cms

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -12,7 +12,6 @@
 	<div class="col-xs-9">
 		<p>
 			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=116" target="_blank">Machine Learning at TACC Training Series</a><br />
-			March 24, March 31, April 7, April 14<span>&nbsp; |&nbsp;
-			9:00AM – 1:00PM CST</span></p>
+			March 24, March 31, April 7, April 14<span>&nbsp; |&nbsp; 9:00AM – 1:00PM CST</span></p>
 	</div>
 </div>
