--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -34,65 +34,39 @@
 		<div class="panel panel-default">
 			<div class="panel-heading" id="data" role="tab">
 				<h4 class="panel-title">
-					<a aria-controls="senior-python-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-python-developer" role="button">Senior Python Developer</a></h4>
-			</div>
-			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
-				<div class="panel-body">
-					<p>This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
-					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading" id="data" role="tab">
-				<h4 class="panel-title">
-					<a aria-controls="senior-devops-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-devops-developer" role="button">Senior DevOps Developer</a></h4>
-			</div>
-			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-developer" role="tabpanel">
-				<div class="panel-body">
-					<p>This position will design, implement and operate an on-premise, national-scale Kubernetes platform as a service for the research computing community.</p>
-					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00013541" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading" id="data" role="tab">
-				<h4 class="panel-title">
-					<a aria-controls="project-and-stakeholder-relationship-manager" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#project-and-stakeholder-relationship-manager" role="button">Project and Stakeholder Relationship Manager</a></h4>
-			</div>
-			<div aria-labelledby="data" class="panel-collapse collapse" id="project-and-stakeholder-relationship-manager" role="tabpanel">
-				<div class="panel-body">
-					
-					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Project-and-Stakeholder-Relationship-Manager_R_00016731" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading" id="data" role="tab">
-				<h4 class="panel-title">
-					<a aria-controls="senior-systems-admin" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-systems-admin" role="button">Senior Systems Administrator</a></h4>
-			</div>
-			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-systems-admin" role="tabpanel">
-				<div class="panel-body">
-					<p>The position will evaluate new architectures, systems, and other system tools to determine the best techniques for providing services to staff and users. Individual will serve as TACC's subject matter expert on configuration change management, security tools, and networking.</p>
-					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Systems-Administrator_R_00017645" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading" id="data" role="tab">
-				<h4 class="panel-title">
 					<a aria-controls="administrative-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#administrative-associate" role="button">Administrative Associate</a></h4>
 			</div>
 			<div aria-labelledby="data" class="panel-collapse collapse" id="administrative-associate" role="tabpanel">
 				<div class="panel-body">
 					<p>Position will provide comprehensive, dependable, administrative support as part of a team within the Texas Advanced Computing Center. Office located at the J.J. Pickle Research campus in northwest Austin.</p>
 					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Administrative-Associate_R_00018318" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Administrative-Associate_R_00019025-1" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+				</div>
+			</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading" id="data" role="tab">
+				<h4 class="panel-title">
+					<a aria-controls="research-engineering-scientist-associate-iii-a" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iii-a" role="button">Research Engineering&#x2F;Scientist Associate III</a></h4>
+			</div>
+			<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iii-a" role="tabpanel">
+				<div class="panel-body">
+					<p>Assist research groups and individuals in deploying applications for managing, sharing, and preserving data, making use of TACC data resources.</p>
+					<p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018935" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+				</div>
+			</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading" id="data" role="tab">
+				<h4 class="panel-title">
+					<a aria-controls="research-engineering-scientist-associate-iii-b" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iii-b" role="button">Research Engineering&#x2F;Scientist Associate III</a></h4>
+			</div>
+			<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iii-b" role="tabpanel">
+				<div class="panel-body">
+					<p>Assist research groups and individuals in working with data using the systems at TACC, and building applications to manage and analyze data across these systems in support of researchers.</p>
+					<p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018936" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 				</div>
 			</div>
 		</div>
