chore(jobs): update based on CMS page redesign

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -24,99 +24,76 @@
 .panel-title > a:focus {
 	text-decoration:none;
 }</style>
-<div>
-	<p>
-		Working at TACC means being part of a dynamic and challenging environment, where talented individuals can pursue their interests, engage their imaginations, and work at the forefront of computational research. Working with us also means living in Austin, an exceptional city that thrives on innovation, culture, and creativity. Investigate current opportunities below.</p>
-	<h4>
-		Current Job Opportunities</h4>
-	<!--<p><b>No open positions at this time.</b></p>-->
-	<div aria-multiselectable="table" class="panel-group" id="careers" role="tablist">
-		<div class="panel panel-default">
-			<div class="panel-heading" id="data" role="tab">
-				<h4 class="panel-title">
-					<a aria-controls="administrative-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#administrative-associate" role="button">Administrative Associate</a></h4>
-			</div>
-			<div aria-labelledby="data" class="panel-collapse collapse" id="administrative-associate" role="tabpanel">
-				<div class="panel-body">
-					<p>Position will provide comprehensive, dependable, administrative support as part of a team within the Texas Advanced Computing Center. Office located at the J.J. Pickle Research campus in northwest Austin.</p>
-					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Administrative-Associate_R_00019025-1" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading" id="data" role="tab">
-				<h4 class="panel-title">
-					<a aria-controls="research-engineering-scientist-associate-iii-a" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iii-a" role="button">Research Engineering&#x2F;Scientist Associate III</a></h4>
-			</div>
-			<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iii-a" role="tabpanel">
-				<div class="panel-body">
-					<p>Assist research groups and individuals in deploying applications for managing, sharing, and preserving data, making use of TACC data resources.</p>
-					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018935" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading" id="data" role="tab">
-				<h4 class="panel-title">
-					<a aria-controls="research-engineering-scientist-associate-iii-b" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iii-b" role="button">Research Engineering&#x2F;Scientist Associate III</a></h4>
-			</div>
-			<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iii-b" role="tabpanel">
-				<div class="panel-body">
-					<p>Assist research groups and individuals in working with data using the systems at TACC, and building applications to manage and analyze data across these systems in support of researchers.</p>
-					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018936" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-				</div>
-			</div>
-		</div>
-		<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
+<style class="darkreader darkreader--sync" media="screen" type="text/css">
+</style>
+<p>
+	<img class="img-responsive" src="/documents/1084364/1085215/jobs-staff.jpg/" style="margin:0px 0px 20px 0px; padding: 0px;" /></p>
+<p style="font-size: 16px; font-style: italic;">
+	Love technology and changing the world? So do we. Which is why "powering discoveries to change the world" is not just our motto, but a primary directive. No matter what team is hiring, you'll be joining an effort to enable breakthrough scientific discoveries across various disciplines, including the most complex global scientific challenges - from pandemics to asteroids.</p>
+<!--<p style="font-size: 16px; font-style: italic;">
+		Working at TACC means being part of a dynamic and challenging environment, where talented individuals can pursue their interests, engage their imaginations, and work at the forefront of computational research. Working with us also means living in Austin, an exceptional city that thrives on innovation, culture, and creativity. Investigate current opportunities below.</p>-->
+<hr />
+<h4>
+	Why Work At TACC?</h4>
+<p>
+	The Texas Advanced Computing Center (TACC) at The University of Texas at Austin is one of the leading supercomputing centers in the world, supporting advances in computational research by thousands of researchers and students. TACC staff help researchers and educators use advanced computing, visualization, and storage technologies effectively, and conduct research and development to make these technologies more powerful, more reliable, and easier to use. TACC staff also educate and train the next generation of researchers, empowering them to make discoveries that advance knowledge and change the world.</p>
+<p>
+	<img class="img-responsive" src="/documents/1084364/1085215/jobs-collage.jpg/992e43bd-68db-4e2a-9585-8bfcb97010db?t=1649201589970" style="margin-bottom:20px;" /></p>
+<p>
+	TACC supports individuals from all communities by respecting and encouraging mindfulness of diverse viewpoints and experiences. We strive to promote diversity in our recruiting and retention practices as we believe inclusivity contributes to the development of excellence in all of our endeavors. TACC fosters a culture of innovation, passion, and fun by encouraging staff members to actively collaborate to investigate the latest technologies, team up for charities, and celebrate successes together. TACC promotes a healthy workplace by helping employees achieve balance between their personal and professional lives in order to increase employee engagement, job satisfaction, and overall well-being.</p>
+<hr />
+<h4>
+	Current Job Opportunities</h4>
+<!--<p><b>No open positions at this time.</b></p>-->
+<div aria-multiselectable="table" class="panel-group" id="careers" role="tablist">
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="__JOB_TITLE_LOWERCASE_ID__" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#__JOB_TITLE_LOWERCASE_ID__" role="button">__JOB_TITLE__</a></h4>
+				<a aria-controls="administrative-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#administrative-associate" role="button">Administrative Associate</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="__JOB_TITLE_LOWERCASE_ID__" role="tabpanel">
-			<div class="panel-body">
-				<p>__DESCRIPTION__</p>
-				<p>
-					<strong><a href="__REPLACE_URL__https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/…__REPLACE_URL__" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>--></div>
-	<!-- FAQ: Internship listing currently hidden --><!--
-<h4 style="margin-top:30px;">
-	Internships</h4>
-<div aria-multiselectable="table" class="panel-group" id="internships" role="tablist">
---><!-- TEMPLATE: Internship Position --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- RFE: Consider using <template> tag --><!--
-	<div class="panel panel-default">
-		<div class="panel-heading" id="intern-head" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="intern-detail" aria-expanded="true" class="collapsed" data-parent="#internships" data-toggle="collapse" href="#intern-detail" role="button">SOFTWARE DEVELOPER TRAINEE (4-month internship)</a></h4>
-		</div>
-		<div aria-labelledby="internships" class="panel-collapse collapse" id="intern-detail" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="administrative-associate" role="tabpanel">
 			<div class="panel-body">
 				<p>
-					<b>Next Cohort Dates: March 19 - July 13th</b><br />
-					This position is for a professional 4-month internship with the Texas Advanced Computing Center's (TACC) Web and Mobile Applications team. Our mission is to use web technologies to help advance science through our diverse set of software development projects. Interns will work on software development tasks and gain experience in both front-, middle-, and back-end tiers.</p>
+					Position will provide comprehensive, dependable, administrative support as part of a team within the Texas Advanced Computing Center. Office located at the J.J. Pickle Research campus in northwest Austin.</p>
 				<p>
-					<a href="https://www.tacc.utexas.edu/about/jobs/internships" target="_blank" title="View this document as a job posting."><strong>Learn More</strong></a></p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Administrative-Associate_R_00019025-1" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
-	--><!--
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="resa-iii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii" role="button">Research Engineering/Scientist Associate III</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					Assist research groups and individuals in deploying applications for managing, sharing, and preserving data, making use of TACC data resources.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018935" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="resa-iii-2" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii-2" role="button">Research Engineering/Scientist Associate III</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii-2" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					Assist research groups and individuals in working with data using the systems at TACC, and building applications to manage and analyze data across these systems in support of researchers.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018936" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
 </div>
--->
-	<p>
-		&nbsp;</p>
-	<h4>
-		Application Information</h4>
-	<p style="font-size:small;">
-		All applicants must formally apply for a specific position through <a href="http://www.utexas.edu/jobs" target="_blank">UT Austin Jobs</a>. For complete job description(s), click on a listing above, and follow instructions to apply for the specific job of interest by using your online resume. For additional information about positions, please contact Sophia Price at <a href="mailto:jobs@tacc.utexas.edu">jobs@tacc.utexas.edu</a></p>
-	<!--
+<p style="font-size:small;">
+	All applicants must formally apply for a specific position through <a href="http://www.utexas.edu/jobs" target="_blank">UT Austin Jobs</a>. For complete job description(s), click on a listing above, and follow instructions to apply for the specific job of interest by using your online resume. For additional information about positions, please contact Sophia Price at <a href="mailto:jobs@tacc.utexas.edu">jobs@tacc.utexas.edu</a></p>
+<!--
 	<p style="font-size:small;">
 The positions listed above include funded positions and positions for which funding is expected. <em>Funded positions</em> include a Job Number on position listing, and can only be applied for through the UT Austin Human Resources system (linked above). Instructions for applying are available on the UT Austin Jobs site. <em>Expected funding positions</em> do not have a Job Number indicated for the position. Inquiries should be directed to the contact listed on the position details.</p>
 -->
-	<p style="font-size:small;">
-		<em>The University of Texas at Austin is an Equal Opportunity/Affirmative Action Employer and actively seeks women and minority applicants for all positions. Working conditions include exposure to standard office conditions, exposure to electrical and mechanical hazards, repetitive use of a keyboard at a workstation, use of manual dexterity, and lifting and moving. All positions are considered security sensitive and will involve a criminal background check and conviction verification conducted on applicant selected. The retirement plan for UT positions is Teacher Retirement System of Texas (TRS), subject to the position being at least 20 hours per week and at least 135 days in length.</em></p>
-</div>
+<p style="font-size:small;">
+	<em>The University of Texas at Austin is an Equal Opportunity/Affirmative Action Employer and actively seeks women and minority applicants for all positions. Working conditions include exposure to standard office conditions, exposure to electrical and mechanical hazards, repetitive use of a keyboard at a workstation, use of manual dexterity, and lifting and moving. All positions are considered security sensitive and will involve a criminal background check and conviction verification conducted on applicant selected. The retirement plan for UT positions is Teacher Retirement System of Texas (TRS), subject to the position being at least 20 hours per week and at least 135 days in length.</em></p>
