feat(RT-21402/RT-21408): two new jobs

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -53,8 +53,7 @@
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="administrative-associate" role="tabpanel">
 			<div class="panel-body">
-				<p>
-					Position will provide comprehensive, dependable, administrative support as part of a team within the Texas Advanced Computing Center. Office located at the J.J. Pickle Research campus in northwest Austin.</p>
+				<p>Position will provide comprehensive, dependable, administrative support as part of a team within the Texas Advanced Computing Center. Office located at the J.J. Pickle Research campus in northwest Austin.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Administrative-Associate_R_00019025-1" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -63,12 +62,11 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="resa-iii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii" role="button">Research Engineering/Scientist Associate III</a></h4>
+				<a aria-controls="research-engineering-scientist-associate-iii-a" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iii-a" role="button">Research Engineering&#x2F;Scientist Associate III</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iii-a" role="tabpanel">
 			<div class="panel-body">
-				<p>
-					Assist research groups and individuals in deploying applications for managing, sharing, and preserving data, making use of TACC data resources.</p>
+				<p>Assist research groups and individuals in deploying applications for managing, sharing, and preserving data, making use of TACC data resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018935" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -77,17 +75,43 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="resa-iii-2" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii-2" role="button">Research Engineering/Scientist Associate III</a></h4>
+				<a aria-controls="research-engineering-scientist-associate-iii-b" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iii-b" role="button">Research Engineering&#x2F;Scientist Associate III</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii-2" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iii-b" role="tabpanel">
 			<div class="panel-body">
-				<p>
-					Assist research groups and individuals in working with data using the systems at TACC, and building applications to manage and analyze data across these systems in support of researchers.</p>
+				<p>Assist research groups and individuals in working with data using the systems at TACC, and building applications to manage and analyze data across these systems in support of researchers.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018936" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="research-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-associate" role="button">Research Associate</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
+			<div class="panel-body">
+				<p>This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC’s HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="hpc-user-support-research-engineering-scientist-associate-ii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#hpc-user-support-research-engineering-scientist-associate-ii" role="button">HPC User Support Research Engineering&#x2F;Scientist Associate II</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="hpc-user-support-research-engineering-scientist-associate-ii" role="tabpanel">
+			<div class="panel-body">
+				<p>The Research Engineering/Scientist Associate II will join the High Performance Computing (HPC) area and serve as front-line user support. This individual will answer technical questions, support training efforts, and review technical documentation.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/HPC-User-Support-Research-Engineering-Scientist-Associate-II_R_00018423" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
 </div>
 <p style="font-size:small;">
 	All applicants must formally apply for a specific position through <a href="http://www.utexas.edu/jobs" target="_blank">UT Austin Jobs</a>. For complete job description(s), click on a listing above, and follow instructions to apply for the specific job of interest by using your online resume. For additional information about positions, please contact Sophia Price at <a href="mailto:jobs@tacc.utexas.edu">jobs@tacc.utexas.edu</a></p>
