--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -29,18 +29,22 @@
 <p>
 	<img class="img-responsive" src="/documents/1084364/1085215/jobs-staff.jpg/" style="margin:0px 0px 20px 0px; padding: 0px;" /></p>
 <p style="font-size: 16px; font-style: italic;">
-	Love technology and changing the world? So do we. Which is why "powering discoveries to change the world" is not just our motto, but a primary directive. No matter what team is hiring, you'll be joining an effort to enable breakthrough scientific discoveries across various disciplines, including the most complex global scientific challenges - from pandemics to asteroids.</p>
+	Love technology and changing the world? So do we. Which is why "powering discoveries that change the world" is not just our motto, but a primary directive. No matter what team is hiring, you'll be joining an effort to enable breakthrough scientific discoveries across various disciplines, including the most complex global scientific challenges from pandemics to asteroids.</p>
 <!--<p style="font-size: 16px; font-style: italic;">
 		Working at TACC means being part of a dynamic and challenging environment, where talented individuals can pursue their interests, engage their imaginations, and work at the forefront of computational research. Working with us also means living in Austin, an exceptional city that thrives on innovation, culture, and creativity. Investigate current opportunities below.</p>-->
 <hr />
 <h4>
 	Why Work At TACC?</h4>
 <p>
-	The Texas Advanced Computing Center (TACC) at The University of Texas at Austin is one of the leading supercomputing centers in the world, supporting advances in computational research by thousands of researchers and students. TACC staff help researchers and educators use advanced computing, visualization, and storage technologies effectively, and conduct research and development to make these technologies more powerful, more reliable, and easier to use. TACC staff also educate and train the next generation of researchers, empowering them to make discoveries that advance knowledge and change the world.</p>
+	The Texas Advanced Computing Center (TACC) at The University of Texas at Austin is one of the leading academic supercomputing centers in the world, supporting advances in computational research by thousands of researchers and students.</p>
+<p>
+	TACC staff help researchers and educators use advanced computing, visualization, and storage technologies effectively, and conduct research and development to make these technologies more powerful, more reliable, and easier to use. TACC staff also educate and train the next generation of researchers, empowering them to make discoveries that advance knowledge and change the world.</p>
 <p>
 	<img class="img-responsive" src="/documents/1084364/1085215/jobs-collage.jpg/992e43bd-68db-4e2a-9585-8bfcb97010db?t=1649201589970" style="margin-bottom:20px;" /></p>
 <p>
-	TACC supports individuals from all communities by respecting and encouraging mindfulness of diverse viewpoints and experiences. We strive to promote diversity in our recruiting and retention practices as we believe inclusivity contributes to the development of excellence in all of our endeavors. TACC fosters a culture of innovation, passion, and fun by encouraging staff members to actively collaborate to investigate the latest technologies, team up for charities, and celebrate successes together. TACC promotes a healthy workplace by helping employees achieve balance between their personal and professional lives in order to increase employee engagement, job satisfaction, and overall well-being.</p>
+	TACC supports individuals from all communities by respecting and encouraging mindfulness of diverse viewpoints and experiences. We strive to promote diversity in our recruiting and retention practices and believe inclusivity contributes to the development of excellence in all of our endeavors.</p>
+<p>
+	TACC fosters a culture of innovation, passion, and fun by encouraging staff members to actively collaborate to investigate the latest technologies, team up for charities, and celebrate successes together. TACC promotes a healthy workplace by helping employees achieve balance between their personal and professional lives to increase employee engagement, job satisfaction, and overall well-being.</p>
 <hr />
 <h4>
 	Current Job Opportunities</h4>
@@ -53,7 +57,8 @@
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="administrative-associate" role="tabpanel">
 			<div class="panel-body">
-				<p>Position will provide comprehensive, dependable, administrative support as part of a team within the Texas Advanced Computing Center. Office located at the J.J. Pickle Research campus in northwest Austin.</p>
+				<p>
+					Position will provide comprehensive, dependable, administrative support as part of a team within the Texas Advanced Computing Center. Office located at the J.J. Pickle Research campus in northwest Austin.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Administrative-Associate_R_00019025-1" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -62,11 +67,12 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="research-engineering-scientist-associate-iii-a" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iii-a" role="button">Research Engineering&#x2F;Scientist Associate III</a></h4>
+				<a aria-controls="resa-iii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii" role="button">Research Engineering/Scientist Associate III</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iii-a" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii" role="tabpanel">
 			<div class="panel-body">
-				<p>Assist research groups and individuals in deploying applications for managing, sharing, and preserving data, making use of TACC data resources.</p>
+				<p>
+					Assist research groups and individuals in deploying applications for managing, sharing, and preserving data, making use of TACC data resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018935" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
@@ -75,39 +81,14 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="research-engineering-scientist-associate-iii-b" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iii-b" role="button">Research Engineering&#x2F;Scientist Associate III</a></h4>
+				<a aria-controls="resa-iii-2" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#resa-iii-2" role="button">Research Engineering/Scientist Associate III</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iii-b" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="resa-iii-2" role="tabpanel">
 			<div class="panel-body">
-				<p>Assist research groups and individuals in working with data using the systems at TACC, and building applications to manage and analyze data across these systems in support of researchers.</p>
+				<p>
+					Assist research groups and individuals in working with data using the systems at TACC, and building applications to manage and analyze data across these systems in support of researchers.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-III_R_00018936" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="research-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-associate" role="button">Research Associate</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
-			<div class="panel-body">
-				<p>This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC’s HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="hpc-user-support-research-engineering-scientist-associate-ii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#hpc-user-support-research-engineering-scientist-associate-ii" role="button">HPC User Support Research Engineering&#x2F;Scientist Associate II</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="hpc-user-support-research-engineering-scientist-associate-ii" role="tabpanel">
-			<div class="panel-body">
-				<p>The Research Engineering/Scientist Associate II will join the High Performance Computing (HPC) area and serve as front-line user support. This individual will answer technical questions, support training efforts, and review technical documentation.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/HPC-User-Support-Research-Engineering-Scientist-Associate-II_R_00018423" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
