feat(RT-21402/RT-21408): re-add two new jobs

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -92,6 +92,33 @@
 			</div>
 		</div>
 	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="research-associate" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-associate" role="button">Research Associate</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
+			<div class="panel-body">
+				<p>This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC’s HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="hpc-user-support-research-engineering-scientist-associate-ii" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#hpc-user-support-research-engineering-scientist-associate-ii" role="button">HPC User Support Research Engineering/Scientist Associate II</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="hpc-user-support-research-engineering-scientist-associate-ii" role="tabpanel">
+			<div class="panel-body">
+				<p>
+					The Research Engineering/Scientist Associate II will join the High Performance Computing (HPC) area and serve as front-line user support. This individual will answer technical questions, support training efforts, and review technical documentation.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/HPC-User-Support-Research-Engineering-Scientist-Associate-II_R_00018423" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
 </div>
 <p style="font-size:small;">
 	All applicants must formally apply for a specific position through <a href="http://www.utexas.edu/jobs" target="_blank">UT Austin Jobs</a>. For complete job description(s), click on a listing above, and follow instructions to apply for the specific job of interest by using your online resume. For additional information about positions, please contact Sophia Price at <a href="mailto:jobs@tacc.utexas.edu">jobs@tacc.utexas.edu</a></p>
