chore(RT-21654): remove word "virtual"

--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -24,7 +24,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				Connected is an innovative and exciting virtual summer program that lets students explore where coding meets communities. You will use networked sensors to collect data and create models for environmentally relevant problems. During the camp, you will learn how data can be used to tell a science story.</p>
+				Connected is an innovative and exciting summer program that lets students explore where coding meets communities. You will use networked sensors to collect data and create models for environmentally relevant problems. During the camp, you will learn how data can be used to tell a science story.</p>
 			<p>
 				All current 10th and 11th (rising 11th and 12th graders) high school students with prior electronics or computer programming experience are welcome to apply.</p>
 			<p>
