chore(jobs): sve form cms (minimal)

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -24,8 +24,6 @@
 .panel-title > a:focus {
 	text-decoration:none;
 }</style>
-<style class="darkreader darkreader--sync" media="screen" type="text/css">
-</style>
 <p>
 	<img class="img-responsive" src="/documents/1084364/1085215/jobs-staff.jpg/" style="margin:0px 0px 20px 0px; padding: 0px;" /></p>
 <p style="font-size: 16px; font-style: italic;">
@@ -99,7 +97,8 @@
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate" role="tabpanel">
 			<div class="panel-body">
-				<p>This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC’s HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
+				<p>
+					This Research Associate for High Performance Computing (HPC) will provide leadership and technical expertise to TACC's HPC research, development, and support initiatives with a strong emphasis on supporting climate/weather/ocean research on HPC resources.</p>
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00018422" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
