--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -118,6 +118,19 @@
 			</div>
 		</div>
 	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="sys-admin-i" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#sys-admin-i" role="button">Systems Administrator I</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="sys-admin-i" role="tabpanel">
+			<div class="panel-body">
+				<p>This position will join the Texas Advanced Computing Center(TACC) as part of the Technical Infrastructure team. The position will provide leadership and technical expertise to TACC's advanced computing activities, supporting and enhancing TACC's world class supercomputing resources.</p>
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Systems-Administrator-I_R_00019313" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
 </div>
 <p style="font-size:small;">
 	All applicants must formally apply for a specific position through <a href="http://www.utexas.edu/jobs" target="_blank">UT Austin Jobs</a>. For complete job description(s), click on a listing above, and follow instructions to apply for the specific job of interest by using your online resume. For additional information about positions, please contact Sophia Price at <a href="mailto:jobs@tacc.utexas.edu">jobs@tacc.utexas.edu</a></p>
