chore(RT-21654): remove another word "virtual"

--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -80,7 +80,7 @@
 				<li>
 					Use sensor networks to collect data.</li>
 				<li>
-					Get a private virtual tour at the TACC Visualization Laboratory and data center.</li>
+					Get a private tour at the TACC Visualization Laboratory and data center.</li>
 				<li>
 					Collaborate with peers, college students, scientists, researchers and engineers.</li>
 			</ul>
