--- a/web-content/root/education/EPIC/Research/publications.html
+++ b/web-content/root/education/EPIC/Research/publications.html
@@ -12,6 +12,10 @@
 	<p>
 		Warner, J. R., Childs, J., Fletcher, C. L., Martin, N. D., &amp; Kennedy, M. (2021). Quantifying disparities in computer science education: Access, participation, and intersectionality. In <em>Proceedings of the 52</em><em><sup>nd</sup> ACM Technical Symposium on Computer Science Education</em>, 619-625. <a href="https://doi.org/10.1145/3408877.3432392" target="_blank">https://doi.org/10.1145/3408877.3432392</a></p>
 	<p>
+		Childs, J., Zarch, R., Torbey, R., and Fletcher, C. L. (2021). Networked improvement communities as tools for teacher empowerment. Paper presented at the <em>Annual Conference on Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT)</em>, Virtual Event, May 2021.<a href="https://doi.org/10.1109/RESPECT51740.2021.9620620">https://doi.org/10.1109/RESPECT51740.2021.9620620</a></p>
+	<p>
+		Fletcher, C. L., Torbey, R., Childs, J., Zarch, R. (2020). Reflections on launching a networked improvement community with computer science educators. Paper presented at the <em>Annual Conference on Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT)</em>, Portland, Oregon, March 2020.<a href="https://doi.org/10.1109/RESPECT49803.2020.9272443">https://doi.org/10.1109/RESPECT49803.2020.9272443</a></p>
+	<p>
 		Osman, D. J., &amp; Warner, J. R. (2020). Measuring teacher motivation: The missing link between professional development and practice. <em>Teaching and Teacher Education, 92, </em>103064. <a href="https://doi.org/10.1016/j.tate.2020.103064" target="_blank">https://doi.org/10.1016/j.tate.2020.103064</a></p>
 	<p>
 		Torbey, R., Martin, N. D., Warner, J. R., &amp; Fletcher, C. L. (2020). Algebra I before high school as a gatekeeper to computer science participation. In <em>Proceedings of the 51st ACM Technical Symposium on Computer Science Education</em>, 839-844. ACM. <a href="https://doi.org/10.1145/3328778.3366877" target="_blank">https://doi.org/10.1145/3328778.3366877</a></p>
